--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 certifi==2023.5.7
 charset-normalizer==3.1.0
 idna==3.4
+python-dotenv==1.0.0
 requests==2.31.0
+tabulate==0.9.0
+termcolor==2.3.0
 urllib3==2.0.2
